# dedit

./: CLAUDE.md  Makefile  Procfile.dev
.claude/: settings.local.json
backend/: create_sample.py  main.py  pyproject.toml  sample_contract.docx
backend/parser/: __init__.py  docx_exporter.py  docx_parser.py  tiptap_converter.py
collab-server/data/: aba7832c-1e38-4792-a7aa-cccb8cc8f66e.yjs
docs/: AI_TRACK.md  USAGE.md  docx-refactor.md  editor.md  implementation.md
docx2tiptap/: DOCUMENTATION.md  LOSSLESS_ROUNDTRIP.md  Makefile  pyproject.toml
docx2tiptap/src/docx2tiptap/: docx_exporter.py  docx_parser.py  models.py  revisions_parser.py  tiptap_converter.py
frontend/: .npmignore  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: DocumentEditor.tsx  FileUpload.tsx
frontend/src/components/ai/: AIChatPanel.tsx  PromptInput.tsx
frontend/src/context/: AIEditorContext.tsx
frontend/src/extensions/: Comment.ts  Deletion.ts  HardBreakWithType.ts  HeadingWithStyle.ts  Insertion.ts  ParagraphWithId.ts  RawStyle.ts  RawStylesStorage.ts  Section.ts  StyleNumbering.ts  Tab.ts  TableWithId.ts  TrackChangesMode.ts
frontend/src/extensions/track-changes/: applyChanges.ts  collectChanges.ts  tooltipPlugin.ts  trackChangesPlugin.ts  types.ts  utils.ts
frontend/src/hooks/ai/: useAIChat.ts  useAIEdits.ts  useAIRecommendations.ts  useContextItems.ts
frontend/src/lib/: DocumentEditor.tsx  index.ts
frontend/src/lib/ai/: applyEdits.ts  diffUtils.ts  documentUtils.ts  index.ts  modes.tsx  prompts.ts  (+2 more)
(+8 files in other folders)
