[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docx2tiptap"
version = "0.1.0"
description = "Parse DOCX files and convert to TipTap JSON format"

license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Jamie Lawrence" }
]
keywords = ["docx", "tiptap", "prosemirror", "word", "document", "parser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "python-docx>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/backrank-ou/docx2tiptap"

[tool.hatch.build.targets.wheel]
packages = ["src/docx2tiptap"]
